paid/force-app/main/default/objects/Product2/fields/PAID_Product_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>PAID_Product_Update_Status__c</fullName>
    <description>Tracks the status of product updates in PAID</description>
    <label>PAID Product Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>