paid/force-app/main/default/objects/Product2/fields/PAID_ProductExternalID__c.field-meta.xml
<CustomField>
    <fullName>PAID_ProductExternalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores the PAID Product ID returned from API</description>
    <externalId>true</externalId>
    <label>PAID Product External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>