paid/force-app/main/default/objects/Product2/fields/Sent_UpdateProduct_to_PAID__c.field-meta.xml
<CustomField>
    <fullName>Sent_UpdateProduct_to_PAID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if product update request was sent to PAID API</description>
    <label>Sent Update Product to PAID</label>
    <type>Checkbox</type>
</CustomField>